--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -11,7 +11,8 @@
     "react-drag-drop-files": "^2.3.9",
     "react-scripts": "5.0.1",
     "sheetjs-style": "^0.15.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
