--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
     "react-export-table-to-excel": "^1.0.6",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sheetjs-style": "^0.15.8",
     "web-vitals": "^2.1.4",
