--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
@@ -13,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
     "react-export-table-to-excel": "^1.0.6",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sheetjs-style": "^0.15.8",
