--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -10,6 +10,9 @@
     "file-saver": "^2.0.5",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
