--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "nanoid": "^4.0.1",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.8.3",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
