--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -9,25 +9,30 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.11.13",
     "@mui/x-data-grid": "^6.0.2",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
     "nanoid": "^4.0.1",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-auth-kit": "^2.8.3",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-csv": "^2.2.2",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
     "react-export-table-to-excel": "^1.0.6",
     "react-hot-toast": "^2.4.0",
+    "react-pdf-to-image": "^1.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sheetjs-style": "^0.15.8",
+    "tesseract.js": "^4.0.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "xlsx-populate": "^1.21.0"
