--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -13,12 +13,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
+    "json-server": "^0.17.3",
     "nanoid": "^4.0.1",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-auth-kit": "^2.8.3",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
