--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/material": "^5.11.13",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "@mui/x-data-grid": "^6.0.2",
     "@react-pdf-viewer/core": "^3.12.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,7 @@
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
     "json-server": "^0.17.3",
+    "material-react-table": "^1.11.0",
     "nanoid": "^4.0.1",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
