--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
     "json-server": "^0.17.3",
+    "mantine-react-table": "^1.0.0-beta.7",
     "material-react-table": "^1.11.0",
     "nanoid": "^4.0.1",
     "pdfjs-dist": "^3.4.120",
