--- a/file-converter/package.json
+++ b/file-converter/package.json
@@ -35,6 +35,7 @@
     "react-drag-drop-files": "^2.3.9",
     "react-export-table-to-excel": "^1.0.6",
     "react-hot-toast": "^2.4.0",
+    "react-jwt-auth": "^0.6.0",
     "react-pdf-to-image": "^1.0.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
